Removed <br> and fixed spacing

--- a/dashboard/dashboard-global-css/dashboard.css
+++ b/dashboard/dashboard-global-css/dashboard.css
@@ -3,7 +3,9 @@
 }
 .navbut{
 	background-color: blue;
+	font-size: 20px;
 	margin: 7px;
+	padding: 10px;
 	transition: all 1s ease 0s;
 }
 .navbut:hover{
@@ -14,7 +16,4 @@
 }
 .characters-left{
 	color: black;
-}
-.control{
-	margin-bottom: -60px;
 }
